fix(button): fix render of hover on safari

--- a/packages/styles/components/Button.module.scss
+++ b/packages/styles/components/Button.module.scss
@@ -21,6 +21,7 @@
   will-change: border-color;
 
   &::before {
+    border-radius: var(--space-lg);
     bottom: 0;
     content: '';
     left: 0;
